| Summary: | ASTERISK-20938: [patch] ConfBridge list from CLI and Manager no longer include waiting members | ||
| Reporter: | Timo Teräs (fabled) | Labels: | |
| Date Opened: | 2013-01-15 01:43:52.000-0600 | Date Closed: | 2013-01-18 15:55:20.000-0600 |
| Priority: | Major | Regression? | Yes |
| Status: | Closed/Complete | Components: | Applications/app_confbridge |
| Versions: | 10.12.0 11.1.0 11.2.0 | Frequency of Occurrence | |
| Related Issues: | |||
| Environment: | Attachments: | ( 0) confbridge-list.patch | |
| Description: | Since revision 375470 the ConfBridgeList manager API command and "confbridge list" CLI command no longer include the waiting users in the conference listing.
This is a regression from previous behavior. | ||
| Comments: | By: Timo Teräs (fabled) 2013-01-15 01:47:46.624-0600 Suggested fix: iterate both active and waiting lists for listing the users. By: Michael L. Young (elguero) 2013-01-15 10:22:47.848-0600 Timo, did you mean to reference r374652? Revision 375470 shouldn't have changed anything related to this. By: Timo Teräs (fabled) 2013-01-15 10:33:01.851-0600 Yes. Sorry, I'm using a git svn clone so must've got the revision wrong. It's the commit with comment "Resolve issues in ConfBridge regarding marked, waitmarked, and unmarked user" The commits (if I get them right now) are 374658 (trunk), 374657 (Asterisk 11), 374652 (Asterisk 10). That splits the member list to two parts: active and waiting. And it changed to list only the ones in active changing previous behavior. By: Timo Teräs (fabled) 2013-01-17 06:41:04.116-0600 action_confbridgelistrooms()'s Parties variable might also need fixing, or adding a new variable with the waiting member count. By: Matt Jordan (mjordan) 2013-01-17 08:33:57.245-0600 Patch looks good to me. | ||